<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- GPS status content -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Latitude -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_latitude" />

            <TextView
                android:id="@+id/gt_gpsinfo_details_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

        <!-- Longitude -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_longitude"/>

            <TextView
                android:id="@+id/gt_gpsinfo_details_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

        <!-- Accuracy -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_accuracy"/>

            <TextView
                android:id="@+id/gt_gpsinfo_details_accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

        <!-- Altitude -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_altitude"/>

            <TextView
                android:id="@+id/gt_gpsinfo_details_altitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

        <!-- Bearing -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_bearing"/>

            <TextView
                android:id="@+id/gt_gpsinfo_details_bearing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

        <!-- Speed -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_speed"/>

            <TextView
                android:id="@+id/gt_gpsinfo_details_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

        <!-- Provider -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_provider"/>

            <TextView
                android:id="@+id/gt_gpsinfo_details_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

        <!-- ElapsedRealtimeNanos -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_elapsed_realtime_nanos"/>

            <TextView
                android:id="@+id/gt_gpsinfo_details_elapsed_realtime_nanos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

        <!-- Time -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_time"/>

            <TextView
                android:id="@+id/gt_gpsinfo_details_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

        <!-- Gps-Status -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gt_gpsinfo_details_label_status"/>

            <TextView
                android:id="@+id/gt_gpsinfo_details_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/key_value_distance"
                android:text="@string/no_value"/>

        </TableRow>

    </TableLayout>

</LinearLayout>