<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- ====================================== -->
        <!-- Connection status -->
        <!-- ====================================== -->

        <!-- Client status title -->
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gt_gr_title_client"
            android:textSize="@dimen/category_title"/>

        <!-- Soft divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerSoft" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gt_gr_label_server_address" />

        <!-- Start/Stop Client -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/gt_gr_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="1"/>

            <ToggleButton
                android:id="@+id/gt_gr_connect_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/gt_gr_button_connect"
                android:textOn="@string/gt_gr_button_disconnect"/>

        </LinearLayout>

        <!-- Additional Client content -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Client status -->
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gt_gr_label_client_state"
                    android:layout_marginStart="@dimen/key_value_distance"/>

                <TextView
                    android:id="@+id/gt_gr_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_value"/>

            </TableRow>

        </TableLayout>

        <!-- ====================================== -->
        <!-- GPS status -->
        <!-- ====================================== -->

        <!-- hard divider -->
        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dividerHard" />

        <!-- GPS status title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gt_gr_title_gps_state"
            android:textSize="@dimen/category_title"/>

        <!-- soft divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerSoft" />

        <FrameLayout
            android:id="@+id/gt_gr_gps_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</ScrollView>